# tropicalia-backend

./: .env.template  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
tests/: test_db_pandas.py  test_models.py  test_storage.py
tropicalia/: __init__.py  __main__.py  algorithm.py  app.py  auth.py  config.py  database.py  logger.py  main.py  manager.py
tropicalia/api/v1/: algorithm.py  dataset.py  user.py
tropicalia/models/: algorithm.py  dataset.py  user.py
tropicalia/storage/: __init__.py  storage.py
tropicalia/storage/backend/: minio.py
tropicalia/tests/: test_db_pandas.py
