[tool.poetry]
name = "tropicalia"
version = "2.0"
description = "TROPICAL-IA backend"
homepage = "https://github.com/ccardas/tropicalia-backend/"
repository = "https://github.com/ccardas/tropicalia-backend/"
authors = ["Cristian Cardas Ezeiza <criscardas@uma.es>"]
classifiers=[
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7.3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]


[tool.poetry.dependencies]
python = "^3.7.2"
numpy = "^1.20.3"
fastapi = "^0.65.1"
pystan = "2.19.0.0"
fbprophet = "^0.7.1"
uvicorn = "^0.13.4"
aiosqlite = "^0.17.0"
pandas = "^1.2.4"
requests = "^2.25.1"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
pre-commit = "^2.13.0"

[tool.poetry.scripts]
tropicalia = "tropicalia.__main__:cli"
test = "tropicalia.tests.test_db_pandas:test"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"